# cursor-doctor

./: README.md  README_EN.md  pyproject.toml
cursor_doctor/: __init__.py  cli.py  diagnose.py  pricing.py
cursor_doctor/fixes/: apply.py
cursor_doctor/signatures/: database.py
