[project]
name = "cursor-doctor"
version = "1.2.0"
description = "Cursor IDE 故障诊断、定价选型与修复工具 — 24+签名检测 + 套餐决策树 + 迁移指南"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[project.scripts]
cursor-doctor = "cursor_doctor.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
